; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_jni_throw.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_jni_throw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__**, i32, i8*)* }

@FZ_ERROR_TRYLATER = common dso_local global i32 0, align 4
@cls_TryLaterException = common dso_local global i32 0, align 4
@cls_RuntimeException = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__**, i32, i8*)* @jni_throw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jni_throw(%struct.TYPE_5__** %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_5__**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @FZ_ERROR_TRYLATER, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %19

10:                                               ; preds = %3
  %11 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32 (%struct.TYPE_5__**, i32, i8*)*, i32 (%struct.TYPE_5__**, i32, i8*)** %13, align 8
  %15 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %16 = load i32, i32* @cls_TryLaterException, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 %14(%struct.TYPE_5__** %15, i32 %16, i8* %17)
  br label %28

19:                                               ; preds = %3
  %20 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32 (%struct.TYPE_5__**, i32, i8*)*, i32 (%struct.TYPE_5__**, i32, i8*)** %22, align 8
  %24 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %25 = load i32, i32* @cls_RuntimeException, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 %23(%struct.TYPE_5__** %24, i32 %25, i8* %26)
  br label %28

28:                                               ; preds = %19, %10
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
